# lf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  release.bat  release.sh  vcpkg.json
.github/workflows/: cmake.yml  linux.yml
doc/: command-format.md  config-format.md  index-format.md
docker/: Dockerfile
src/: main.cpp  utf8.manifest
src/cmd/: add_cmd.cpp  add_cmd.hpp  cmd.cpp  cmd.hpp  cmd_context.hpp  cmd_desc.cpp  cmd_desc.hpp  cmd_registry.cpp  cmd_registry.hpp  rm_cmd.cpp  rm_cmd.hpp  sync_cmd.cpp  sync_cmd.hpp
src/cmd/impl/: add_cmd.cpp  add_cmd.hpp  del_cmd.cpp  del_cmd.hpp  info_cmd.cpp  info_cmd.hpp  mv_cmd.cpp  mv_cmd.hpp  rm_cmd.cpp  rm_cmd.hpp  sync_cmd.cpp  sync_cmd.hpp
src/cmd/index/: add_cmd.hpp  rm_cmd.cpp  rm_cmd.hpp
src/cmd/info/: index_cmd.cpp  index_cmd.hpp  info_cmd.cpp  info_cmd.hpp
src/cmd/sync/: sync_cmd.cpp  sync_cmd.hpp
src/config/: config.cpp  config.hpp  config_mirror.hpp  config_mode.cpp  config_mode.hpp  config_parser.hpp  config_sync.hpp  config_util.hpp
src/encoding/: encoding.hpp  utf8.hpp
src/err/: error_handler.cpp  error_handler.hpp
src/fs/: adv_fstream.hpp  error.cpp  error.hpp  file_type.cpp  file_type.hpp  os_path.cpp  os_path.hpp  path.cpp  path.hpp  serialization.cpp  serialization.hpp  time.cpp  time.hpp  util.cpp  util.hpp
src/fs/watch/: file_watcher.hpp  file_watcher.linux.cpp
src/glob/: glob.cpp  glob.hpp  glob_path.cpp  glob_path.hpp  globdef.hpp  match.hpp  parse.cpp  parse.hpp  stringify.cpp  stringify.hpp
src/glob/matcher/: any_matcher.cpp  any_matcher.hpp  char_matcher.cpp  char_matcher.hpp  codepoint_matcher.hpp  glob_matcher.cpp  glob_matcher.hpp  matcher.hpp  range_matcher.cpp  range_matcher.hpp  star_matcher.cpp  star_matcher.hpp  string_matcher.cpp  string_matcher.hpp
src/glob/predicate/: any_predicate.hpp  class_predicate.hpp  dynamic_predicate.hpp  not_predicate.hpp  or_predicate.hpp  predicate.hpp  range_predicate.hpp  set_predicate.hpp
src/index/: index.cpp  index.hpp  index_binary.cpp  index_entry.cpp  index_entry.hpp  index_entry_binary.cpp  index_entry_print.cpp  index_flags.cpp  index_flags.hpp  index_print.cpp  index_root.cpp  index_root.hpp  index_root_binary.cpp  index_root_print.cpp  index_sync_mode.cpp  index_sync_mode.hpp  index_tree.cpp  index_tree.hpp  indexer.cpp  indexer.hpp  sync_mode.cpp  sync_mode.hpp
src/io/: adv_fstream.hpp  data_location.hpp  datetime.cpp  datetime.hpp  errors.cpp  errors.hpp  file_type.cpp  format.hpp  format_stream.cpp  format_stream.hpp  ios_flags.cpp  ios_flags.hpp  joiner.hpp  log.cpp  log.hpp  null_stream.cpp  null_stream.hpp  openmode.cpp  openmode.hpp  serialization.hpp  stream_type.hpp  time.cpp  time.hpp  util.cpp  util.hpp  with_format.hpp
src/io/log/: log.cpp  log.hpp  log_level.cpp  log_level.hpp  log_message.hpp  log_stream.cpp  log_stream.hpp
src/io/log/filter/: log_filter.cpp  log_filter.hpp  log_level_filter.cpp  log_level_filter.hpp
src/io/log/formatter/: log_formatter.hpp  simple_log_formatter.cpp  simple_log_formatter.hpp
src/io/log/sink/: composite_log_sink.cpp  composite_log_sink.hpp  log_sink.cpp  log_sink.hpp  stream_log_sink.cpp  stream_log_sink.hpp
src/log/: config.cpp  config.hpp  log.cpp  log.hpp  log_config.cpp  log_config.hpp  log_level.cpp  log_message.hpp  log_stream.cpp  log_stream.hpp
src/log/filter/: log_filter.cpp  log_filter.hpp  log_level_filter.cpp  log_level_filter.hpp
src/log/formatter/: log_formatter.hpp  simple_log_formatter.cpp  simple_log_formatter.hpp
src/log/sink/: composite_log_sink.cpp  composite_log_sink.hpp  log_sink.cpp  log_sink.hpp  rolling_file_info.cpp  rolling_file_info.hpp  rolling_file_sink.cpp  rolling_file_sink.hpp  stream_log_sink.cpp  stream_log_sink.hpp
src/opts/: opt.hpp  opt_map.cpp  opt_map.hpp  opts.cpp  opts.hpp
src/state/: state.cpp  state.hpp  state_tree.cpp  state_tree.hpp
src/sync/: entry_synchronizer.cpp  entry_synchronizer.hpp  fs_traverser.cpp  path_info.cpp  path_info.hpp  sync_item.hpp  synchronizer.cpp  synchronizer.hpp
src/tree/: binary.hpp  lazy_tree.hpp  order.hpp  print.hpp  tracked_tree.hpp  tree.hpp  tree_binary.cpp  tree_binary.hpp  tree_loader.hpp  tree_print.hpp  view.hpp
src/unicode/: unicode.hpp
src/util/: bitset.cpp  bitset.hpp  change_state.hpp  console.cpp  console.hpp  container.hpp  hash.cpp  hash.hpp  map.hpp  opts.hpp  pick.hpp  sort.hpp  str_hash.cpp  str_hash.hpp  string.cpp  string.hpp  string_map.hpp  tokenizer.cpp  tokenizer.hpp  util.hpp
test/: main.cpp  test_util.cpp  test_util.hpp
test/cmd/: cmd.cpp  cmd_desc.cpp
test/cmd/impl/: add_cmd.cpp  del_cmd.cpp  rm_cmd.cpp
test/config/: config.cpp  config.txt  config_mode.cpp  config_parser.cpp
test/encoding/: utf8.cpp
test/encoding/testdir/: Русский.txt
test/fs/: adv_fstream.cpp  lock.cpp  new_format.cpp  path.cpp  serialization.cpp  time.cpp  util.cpp
test/glob/: glob.cpp  glob_path.cpp  match_tester.cpp  match_tester.hpp  matcher.cpp  predicate.cpp
test/index/: index.cpp  index_cmp.cpp  index_cmp.hpp  index_entry.cpp  index_flags.cpp  index_root.cpp
test/io/: adv_fstream.cpp  datetime.cpp  errors.cpp  file.cpp  ios_flags.cpp  log.cpp  log_tester.cpp  log_tester.hpp  nlog.cpp  openmode.cpp  time.cpp
test/log/: log_tester.cpp  log_tester.hpp
test/log/sink/: rolling_file_info.cpp  rolling_file_sink.cpp
test/opts/: opts.cpp
test/sync/: entry_synchronizer.cpp  glob_sync.cpp  new_sync_proto.cpp  synchronizer.cpp
test/tree/: lazy_tree.cpp  tree.cpp  tree_loader.cpp
test/unicode/: unicode.cpp  Русский.txt  日本語ファイル.txt
test/unicode/testdir/: Ελληνικά.txt
test/util/: bitset.cpp  hash.cpp  map.cpp  pick.cpp  str_hash.cpp  string.cpp  string_map.cpp
